--- a/web.html
+++ b/web.html
@@ -10,6 +10,61 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/site/style.css">
 <link rel="stylesheet" href="/site/media.css">  
+
+
+<script type="text/javascript"
+       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script type="text/javascript">
+  (function () {
+     emailjs.init("49HFGFpyNv-37Ska5");
+  })();
+</script>
+<script>
+
+
+    document.addEventListener('DOMContentLoaded', function() {
+    const form = document.getElementById('contact-form');
+
+    form.addEventListener('submit', function(event) {
+        event.preventDefault(); // Prevent the form from reloading the page
+
+        const formData = new FormData(form);
+        formData.append('service_id', 'service_jhyub6o');
+        formData.append('template_id', 'template_mof36ja');
+        formData.append('user_id', '49HFGFpyNv-37Ska5');
+
+        fetch('https://api.emailjs.com/api/v1.0/email/send-form', {
+            method: 'POST',
+            body: formData,
+        })
+        .then(response => {
+            if (response.ok) {
+                alert('Your mail is sent!');
+            } else {
+                return response.json().then(error => {
+                    throw new Error(JSON.stringify(error));
+                });
+            }
+        })
+        .catch(error => {
+            alert('Oops... ' + error.message);
+        });
+    });
+});
+
+
+
+
+
+
+
+
+
+
+
+</script>
+
   
 </head>
 <body>
@@ -257,7 +312,7 @@
 
             <div class="col-lg-6 col-md-12">
 
-                <form class="form-origin">
+                <form class="form-origin" id="contact-form">
 
                     <div class="row">
 
@@ -265,7 +320,7 @@
 
 <div class="mb-3">
 
-    <input type="text" class="form-control" placeholder="Full-name" id="name"  required>
+    <input type="text" class="form-control" placeholder="Full-name" id="name"  name=user_name required>
 </div>
                         </div>
 
@@ -273,7 +328,7 @@
 
                             <div class="mb-3">
 
-                                <input type="email" class="form-control" placeholder="Email" id="email" required>
+                                <input type="email" class="form-control" placeholder="Email" id="email" name=user_email required>
                             </div>
                         </div>
 
@@ -282,7 +337,7 @@
 
                             <div class="mb-3">
 
-                                <textarea type="text" style="height: 300px;" class="form-control" placeholder="message" id="message" required></textarea>
+                                <textarea type="text" style="height: 300px;" class="form-control" name=message placeholder="message" id="message" required></textarea>
                             </div>
                         </div>
                     
