--- a/web.html
+++ b/web.html
@@ -127,7 +127,7 @@
                         </p> 
                         <div class="btn-home">
                             <a href="#" class="home-links">Buy Now</a>
-                            <a href="#" class="home-links btn2">Explore</a>
+                            <a href="#" class="home-links btn2" id=bb>Explore</a>
 
                         </div>
                     
