--- a/web.html
+++ b/web.html
@@ -214,7 +214,7 @@
                             <div class="card-body">
                               <h5 class="card-title">SoundMagic E10</h5>
                               <p class="card-text">Budget in-ear headphones with great sound quality</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Check out</a>
                             </div>
                           </div>
                     </div>
@@ -225,7 +225,7 @@
                             <div class="card-body">
                               <h5 class="card-title">Sony WH</h5>
                               <p class="card-text">Premium over-ear noise-canceling headphones.</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Check out</a>
                             </div>
                           </div>
                     </div>
@@ -236,7 +236,7 @@
                             <div class="card-body">
                               <h5 class="card-title">JBL Tune 500</h5>
                               <p class="card-text">Affordable on-ear headphones with powerful bass</p>
-                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                              <a href="#" class="btn btn-primary">Check out</a>
                             </div>
                           </div>
                     </div>
@@ -253,7 +253,7 @@
                                 <div class="card-body">
                                   <h5 class="card-title">Apple AirPod</h5>
                                   <p class="card-text">Popular true wireless earbuds with seamless iOS integration</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                  <a href="#" class="btn btn-primary">Check out</a>
                                 </div>
                               </div>
                         </div>
@@ -264,7 +264,7 @@
                                 <div class="card-body">
                                   <h5 class="card-title">Sennheiser</h5>
                                   <p class="card-text">Professional over-ear headphones with excellent sound isolation</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                  <a href="#" class="btn btn-primary">Check out</a>
                                 </div>
                               </div>
                         </div>
@@ -275,7 +275,7 @@
                                 <div class="card-body">
                                   <h5 class="card-title">Beats Solo3</h5>
                                   <p class="card-text">Stylish on-ear headphones with a long battery life.</p>
-                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                  <a href="#" class="btn btn-primary">Check out</a>
                                 </div>
                               </div>
                         </div>
