--- a/web.html
+++ b/web.html
@@ -74,29 +74,29 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg">
                 <div class="container ">
-                  <a class="navbar-brand logo   text-uppercase"  href="#" >Zound</a>
+                  <a class="navbar-brand logo   text-uppercase"  href="#home" >Zound</a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                   <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto" >
                       <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" aria-current="page" href="#home">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#about-us">About-us</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Headphones</a>
+                        <a class="nav-link" href="#product">Headphones</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Products</a>
+                        <a class="nav-link" href="#product">Products</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link" href="#contact">Contact</a>
                       </li> 
                        <li class="nav-item">
-                        <a class="btn-navbar" href="#">Buy Now</a>
+                        <a class="btn-navbar" href="#product">Buy Now</a>
                       </li>
                     </ul>
                   </div>
@@ -109,7 +109,7 @@
             <div class="col-lg-7 col-md-5 ">
 
 
-                <div class="box-conatainer">
+                <div class="box-conatainer" id=home>
                     <img src="/site/black-headphones-digital-device.webp" width="700" height=auto class="img-home" alt="banner img">
                 </div>
 
@@ -126,8 +126,8 @@
                           
                         </p> 
                         <div class="btn-home">
-                            <a href="#" class="home-links">Buy Now</a>
-                            <a href="#" class="home-links btn2" id=bb>Explore</a>
+                            <a href="#product" class="home-links">Buy Now</a>
+                            <a href="#product" class="home-links btn2" id=bb>Explore</a>
 
                         </div>
                     
@@ -197,7 +197,7 @@
 
 <section class="product-catagory ">
 
-    <h1 class="heading-product">
+    <h1 class="heading-product" id=product>
         Product catagory
     </h1>
     <div class="container-fluid">
@@ -306,7 +306,7 @@
 
 <section class="contact-form">
 
-    <h3 class="heading-contact">Contact us</h3>
+    <h3 class="heading-contact" id=contact>Contact us</h3>
     <div class="container">
         <div class="row">
 
