--- a/web.html
+++ b/web.html
@@ -165,7 +165,7 @@
 
                         </h3>
                         <p class="para-about">we are passionate about bringing you the finest audio products that enhance your music</p>
-                        <p class="para-about">Founded with a love for music and technology, our mission is to provide high-quality headphones that resonate with music enthusiasts</p>
+                        <p class="para-about">Founded with a love for music and technology, our mission is to provide high-quality headphones that resonate with music </p>
 <a href="#" class="link-about">Learn more</a>
 
                     </div>
